# learn_rust

./: .gitignore  README.md
000_old/eight_bit_adder_subtractor/: Cargo.toml
000_old/eight_bit_adder_subtractor/src/: main.rs
000_old/id_checker/src/: main.rs
000_old/lifetime_test/: Cargo.toml
000_old/search_word/: README.md
000_old/slices_test/src/: main.rs
000_old/struct_test/: Cargo.toml
eight_bit_adder_subtractor/src/: main.rs
hello/: Cargo.toml
hello/src/: main.rs
id_checker/: Cargo.toml
id_checker/src/: main.rs
lifetime_test/src/: main.rs
markdown_slide/: Rust All.md  rust all.xml
p000_old/: README.md
p000_old/struct_test/src/: struct.rs  struct2.rs
p001_modules/: Cargo.toml  README.md
p001_modules/src/: main.rs  module1.rs  module2.rs
p001_modules/src/module1/: sub_module1.rs  sub_module2.rs
p001_modules/src/module2/: sub_module3.rs
rackmd/: Cargo.toml
rackmd/src/: main.rs
search_word/: Cargo.toml
search_word/src/: main.rs
slices_test/: Cargo.toml
slices_test/src/: main.rs
struct_test/: Cargo.toml  cppmain.cpp
struct_test/src/: main.rs  struct3.rs  struct4.rs
